new update with java 8 stream